ToJson enhanced .... unit testing

--- a/mvcdynamicforms_ef8fb2ed1afb/MVCDynamicForms.DBLayer/MVCDynamicForms.DBLayer.csproj
+++ b/mvcdynamicforms_ef8fb2ed1afb/MVCDynamicForms.DBLayer/MVCDynamicForms.DBLayer.csproj
@@ -30,7 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MongoDB.Bson">
+      <HintPath>..\..\..\..\Marketing.UserDataManagementSystem\03.Development\Modules\UDMS.Modules.DefaultEFPersistence\bin\Debug\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>..\..\..\..\Marketing.UserDataManagementSystem\03.Development\Modules\UDMS.Modules.DefaultEFPersistence\bin\Debug\MongoDB.Driver.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDBLayer.cs" />
+    <Compile Include="MongoDBLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
