--- a/mvcdynamicforms_ef8fb2ed1afb/MVCDynamicForms.DBLayer/MVCDynamicForms.DBLayer.csproj
+++ b/mvcdynamicforms_ef8fb2ed1afb/MVCDynamicForms.DBLayer/MVCDynamicForms.DBLayer.csproj
@@ -31,10 +31,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MongoDB.Bson">
-      <HintPath>..\..\..\..\Marketing.UserDataManagementSystem\03.Development\Modules\UDMS.Modules.DefaultEFPersistence\bin\Debug\MongoDB.Bson.dll</HintPath>
+      <HintPath>..\packages\mongocsharpdriver.1.8.1\lib\net35\MongoDB.Bson.dll</HintPath>
     </Reference>
     <Reference Include="MongoDB.Driver">
-      <HintPath>..\..\..\..\Marketing.UserDataManagementSystem\03.Development\Modules\UDMS.Modules.DefaultEFPersistence\bin\Debug\MongoDB.Driver.dll</HintPath>
+      <HintPath>..\packages\mongocsharpdriver.1.8.1\lib\net35\MongoDB.Driver.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
