MongoDB Layer FormData Bson class map... unit tests...

--- a/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Core/MvcDynamicForms.Core.csproj
+++ b/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Core/MvcDynamicForms.Core.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Enums\FieldType.cs" />
     <Compile Include="Form.cs" />
     <Compile Include="Fields\Abstract\InputField.cs" />
+    <Compile Include="FormData.cs" />
     <Compile Include="ListItem.cs" />
     <Compile Include="MagicStrings.cs" />
     <Compile Include="PlaceHolders.cs" />
