--- a/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.CoreTests/App.config
+++ b/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.CoreTests/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="mongoServer" value="172.16.129.53" />
+    <add key="mongoDatabase" value="MvcDynamicForms" />
+  </appSettings>
   <system.diagnostics>
     <trace>
       <listeners>
