adding site controller

--- a/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Core/MvcDynamicForms.Core.csproj
+++ b/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Core/MvcDynamicForms.Core.csproj
@@ -123,6 +123,7 @@
     <Compile Include="RegexPatterns.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="SerializationUtility.cs" />
+    <Compile Include="Site.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
