--- a/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Demo/Web.config
+++ b/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Demo/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -12,6 +12,8 @@
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+   <add key="mongoServer" value="172.16.120.246" />
+    <add key="mongoDatabase" value="MvcDynamicForms" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -71,6 +73,9 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MVCDynamicForms.Demo-20131115155520;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MVCDynamicForms.Demo-20131115155520.mdf" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MVCDynamicForms.Demo-20131115155520;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MVCDynamicForms.Demo-20131115155520.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="DemoContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=DemoContext-20131205151047; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|DemoContext-20131205151047.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
