--- a/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Demo/MVCDynamicForms.Web.csproj
+++ b/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Demo/MVCDynamicForms.Web.csproj
@@ -179,7 +179,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
     <Content Include="Views\Test\Index.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
